add customer and supplier patch
